test: add integration tests with nock
Added 3 integration tests that verify actual file system operations:
- Mock only Slack API using nock (HTTP layer)
- Use real file system (write to temp dir)
- Verify files are actually created with correct content
- Test different scenarios: handle lookup, direct ID, missing image

This complements existing unit tests (vi.mock) which test logic only.

Test coverage:
- Unit tests (7): Logic, branching, error handling
- Integration tests (3): File I/O, stream processing, end-to-end flow

--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "commander": "^12.1.0"
   },
   "devDependencies": {
+    "@types/nock": "^10.0.3",
     "@types/node": "^22.10.2",
     "@vitest/coverage-v8": "^4.0.16",
     "@vitest/ui": "^4.0.16",
+    "nock": "^14.0.10",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "vitest": "^4.0.16"
